index club page in dark mode, minor fixes to index-cards

--- a/app/assets/stylesheets/config/_custom-css.scss
+++ b/app/assets/stylesheets/config/_custom-css.scss
@@ -48,6 +48,10 @@
   font-weight: 700;
 }
 
+.ct-medium {
+  font-weight: 500;
+}
+
 // Background colors
 .ct-bg-global {
   background-color: $ct-bg-global;
@@ -67,6 +71,10 @@
 // Capitalize
 .ct-capitalize {
   text-transform: capitalize;
+}
+
+.ct-no-capitals {
+  text-transform: none;
 }
 
 
